bgo#760262: rsvg-convert: Actually scale the image if required

Commit fecfcce44a959daff80a4e0f9ced83d7cdcb5903 removed a call to the deprecated function
rsvg_handle_set_size_callback(), but this is what actually made the program scale
the resulting image if required.  Here we use a Cairo transformation matrix instead.

https://bugzilla.gnome.org/show_bug.cgi?id=760262

Based on a patch by Menner <mik@gmx.org>